<resources>
    <string name="app_name">Contador de Mus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="man">Manual</string>
    <string name="about">Acerca de</string>
    <string name="contador">Contador</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cinco">5</string>
    <string name="diez">10</string>
    <string name="cuarenta">40</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">Un simple contador para partidas de mus \n \n
        Copyright (C) 2016-2017 David Población Criado \n\n
        Este programa es libre: puede redistribuirlo y/o modificarlo bajo los términos de GNU General Public License (GPL), versión 3, tal y como está publicada en la Free Software Foundation. \n\n
        Este programa se distribuye con la esperanza de resultar útil, pero SIN NINGUNA GARANTÍA; incluso sin la garantía implícita de COMERCIABILIDAD o IDONEIDAD PARA UN PROPÓSITO PARTICULAR. Ver la GNU General Public License (GPL), versión 3, para
        más detalles. \n\n</string>
</resources>